# retail-causal-impact

./: .gitignore  .pre-commit-config.yaml  CI_STATUS.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  Makefile  OUTPUT_INTERPRETATION_GUIDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_quick.py  verify_ci.sh
.github/workflows/: ci.yml  quick-check.yml
app/: streamlit_app.py
config/: default.yaml
notebooks/: 00_eda.ipynb  10_causal_estimation.ipynb  20_policy_uplift.ipynb
scripts/: run_pipeline.py  score_policy.py
src/coupon_causal/: __init__.py  ate.py  balance.py  cate.py  data.py  features.py  policy.py  propensity.py  refute.py  utils.py  viz.py
src/coupon_causal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_balance.py  test_policy.py  test_synth_recovery.py
