# path: pyproject.toml
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coupon-causal"
version = "0.1.0"
description = "Production-quality causal impact analysis for retail coupon campaigns"
authors = [{name = "Causal Impact Team"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "numpy>=2.3.0,<3.0.0",
    "scikit-learn>=1.6.0,<1.7.0",
    "statsmodels>=0.14.5,<0.15.0",
    "matplotlib>=3.10.0,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "plotly>=5.24.0,<6.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "scipy>=1.14.0,<=1.15.3",
    "joblib>=1.4.0,<2.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "econml>=0.16.0,<0.17.0",
    "dowhy>=0.14.0,<0.15.0",
    "streamlit>=1.51.0,<2.0.0",
    "pyarrow>=18.0.0,<19.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.14.5,<0.15.0",
    "mypy>=1.18.0,<2.0.0",
    "jupyter>=1.1.0,<2.0.0",
    "ipykernel>=6.29.0,<7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N806",  # Variable should be lowercase (X, T, Y are standard in causal inference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
